--- a/index.html
+++ b/index.html
@@ -5,5 +5,22 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <header id="main-header">
+      <div class="content">
+        <nav>
+          <ul>
+            <li><img src="/images/home.svg" alt="home">Home</li>
+            <li><img src="/images/notification.svg" alt="notification">Notifications</li>
+            <li><img src="/images/message.svg" alt="message">Messages</li>
+          </ul>
+        </nav>
+        <img src="/images/twitter.svg" alt="Logo Twitter">
+        <div class="side">
+          <input type="text" placeholder="Search on Twitter">
+          <img src="/images/avatar.svg"/>
+          <button>Tweet</button>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
