--- a/index.html
+++ b/index.html
@@ -1,26 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Twitter</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <header id="main-header">
-      <div class="content">
-        <nav>
-          <ul>
-            <li><img src="/images/home.svg" alt="home">Home</li>
-            <li><img src="/images/notification.svg" alt="notification">Notifications</li>
-            <li><img src="/images/message.svg" alt="message">Messages</li>
-          </ul>
-        </nav>
-        <img src="/images/twitter.svg" alt="Logo Twitter">
-        <div class="side">
-          <input type="text" placeholder="Search on Twitter">
-          <img src="/images/avatar.svg"/>
-          <button>Tweet</button>
-        </div>
+
+<head>
+  <title>Twitter</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header id="main-header">
+    <div class="content">
+      <nav>
+        <ul>
+          <li><img src="/images/home.svg" alt="home">Home</li>
+          <li><img src="/images/notification.svg" alt="notification">Notifications</li>
+          <li><img src="/images/message.svg" alt="message">Messages</li>
+        </ul>
+      </nav>
+      <img src="/images/twitter.svg" alt="Logo Twitter">
+      <div class="side">
+        <input type="text" placeholder="Search on Twitter">
+        <img src="/images/avatar.svg" />
+        <button>Tweet</button>
       </div>
-    </header>
-  </body>
+    </div>
+  </header>
+  <div class="banner">
+    <h1>RocketTwitter</h1>
+  </div>
+  <div class="bar">
+    <div class="content">
+      <ul>
+        <li class="active">
+          <span>Tweets</span>
+          <strong>1983</strong>
+        </li>
+        <li>
+          <span>Followers</span>
+          <strong>170</strong>
+        </li>
+        <li>
+          <span>Followings</span>
+          <strong>150</strong>
+        </li>
+        <li>
+          <span>Favorites</span>
+          <strong>15</strong>
+        </li>
+      </ul>
+      <div class="actions">
+        <button>Folow</button>
+        <img src="/images/more.svg" alt="more">
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
