finalizado! - sem animacoes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
   </header>
   <div class="banner">
-    <h1>RocketTwitter</h1>
+    <h1>Let the games begin!</h1>
   </div>
   <div class="bar">
     <div class="content">
@@ -52,6 +52,233 @@
         <img src="/images/more.svg" alt="more">
       </div>
     </div>
+  </div>
+
+  <div class="wrapper-content content">
+    <aside class="profile">
+      <img class="avatar" src="/images/avatar.svg" alt="jigsaw">
+      <h1>Jigsaw</h1>
+      <span>@jigsaw</span>
+      <p>Fiction horror movie actor.</p>
+      <ul class="infos">
+        <li>
+          <img src="/images/place.svg" alt=""><span>Queen, New Yourk</span>
+        </li>
+        <li>
+          <img src="/images/website.svg" alt=""><a href="">Jigsaw.ny</a>
+        </li>
+        <li>
+          <img src="/images/clock.svg" alt=""><span>Joined February 2005</span>
+        </li>
+        <li>
+          <img src="/images/child.svg" alt=""><span>Born the 7h of August 1942</span>
+        </li>
+      </ul>
+
+      <div class="widget followers">
+        <strong><img src="/images/profile.svg" alt="followrs">43 Followers that you know</strong>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="widget images">
+        <strong><img src="/images/gallery.svg" alt="">233 Photos and videos</strong>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </aside>
+    <section class="timeline">
+      <nav>
+        <a href="" class="active">Tweets</a>
+        <a href="">Tweets and replies</a>
+        <a href="">Medias</a>
+      </nav>
+
+      <ul class="tweets">
+        <li>
+          <img src="/images/tweetavatar.svg" alt="">
+          <div class="info">
+            <strong>James Wan <span>@jamesWan</span></strong>
+            <p>James Wan é um diretor, roteirista e produtor de cinema. Os filmes dirigidos por James Wan são Jogos
+              Mortais, Gritos Mortais, Sentença de Morte, Sobrenatural, Sobrenatural 2, Invocação do Mal, Invocação do
+              Mal 2, The Fast and the Furious e Aquaman.</p>
+            <div class="actions">
+              <a href=""><img src="/images/chat.svg" alt="chat">2</a>
+              <a href=""><img src="/images/refresh.svg" alt="retweet">3</a>
+              <a href=""><img src="/images/heart.svg" alt="like">10</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/images/tweetavatar.svg" alt="">
+          <div class="info">
+            <strong>James Wan <span>@jamesWan</span></strong>
+            <p>James Wan é um diretor, roteirista e produtor de cinema. Os filmes dirigidos por James Wan são Jogos
+              Mortais, Gritos Mortais, Sentença de Morte, Sobrenatural, Sobrenatural 2, Invocação do Mal, Invocação do
+              Mal 2, The Fast and the Furious e Aquaman.</p>
+            <div class="actions">
+              <a href=""><img src="/images/chat.svg" alt="chat">2</a>
+              <a href=""><img src="/images/refresh.svg" alt="retweet">3</a>
+              <a href=""><img src="/images/heart.svg" alt="like">10</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/images/tweetavatar.svg" alt="">
+          <div class="info">
+            <strong>James Wan <span>@jamesWan</span></strong>
+            <p>James Wan é um diretor, roteirista e produtor de cinema. Os filmes dirigidos por James Wan são Jogos
+              Mortais, Gritos Mortais, Sentença de Morte, Sobrenatural, Sobrenatural 2, Invocação do Mal, Invocação do
+              Mal 2, The Fast and the Furious e Aquaman.</p>
+            <div class="actions">
+              <a href=""><img src="/images/chat.svg" alt="chat">2</a>
+              <a href=""><img src="/images/refresh.svg" alt="retweet">3</a>
+              <a href=""><img src="/images/heart.svg" alt="like">10</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/images/tweetavatar.svg" alt="">
+          <div class="info">
+            <strong>James Wan <span>@jamesWan</span></strong>
+            <p>James Wan é um diretor, roteirista e produtor de cinema. Os filmes dirigidos por James Wan são Jogos
+              Mortais, Gritos Mortais, Sentença de Morte, Sobrenatural, Sobrenatural 2, Invocação do Mal, Invocação do
+              Mal 2, The Fast and the Furious e Aquaman.</p>
+            <div class="actions">
+              <a href=""><img src="/images/chat.svg" alt="chat">2</a>
+              <a href=""><img src="/images/refresh.svg" alt="retweet">3</a>
+              <a href=""><img src="/images/heart.svg" alt="like">10</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/images/tweetavatar.svg" alt="">
+          <div class="info">
+            <strong>James Wan <span>@jamesWan</span></strong>
+            <p>James Wan é um diretor, roteirista e produtor de cinema. Os filmes dirigidos por James Wan são Jogos
+              Mortais, Gritos Mortais, Sentença de Morte, Sobrenatural, Sobrenatural 2, Invocação do Mal, Invocação do
+              Mal 2, The Fast and the Furious e Aquaman.</p>
+            <div class="actions">
+              <a href=""><img src="/images/chat.svg" alt="chat">2</a>
+              <a href=""><img src="/images/refresh.svg" alt="retweet">3</a>
+              <a href=""><img src="/images/heart.svg" alt="like">10</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/images/tweetavatar.svg" alt="">
+          <div class="info">
+            <strong>James Wan <span>@jamesWan</span></strong>
+            <p>James Wan é um diretor, roteirista e produtor de cinema. Os filmes dirigidos por James Wan são Jogos
+              Mortais, Gritos Mortais, Sentença de Morte, Sobrenatural, Sobrenatural 2, Invocação do Mal, Invocação do
+              Mal 2, The Fast and the Furious e Aquaman.</p>
+            <div class="actions">
+              <a href=""><img src="/images/chat.svg" alt="chat">2</a>
+              <a href=""><img src="/images/refresh.svg" alt="retweet">3</a>
+              <a href=""><img src="/images/heart.svg" alt="like">10</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/images/tweetavatar.svg" alt="">
+          <div class="info">
+            <strong>James Wan <span>@jamesWan</span></strong>
+            <p>James Wan é um diretor, roteirista e produtor de cinema. Os filmes dirigidos por James Wan são Jogos
+              Mortais, Gritos Mortais, Sentença de Morte, Sobrenatural, Sobrenatural 2, Invocação do Mal, Invocação do
+              Mal 2, The Fast and the Furious e Aquaman.</p>
+            <div class="actions">
+              <a href=""><img src="/images/chat.svg" alt="chat">2</a>
+              <a href=""><img src="/images/refresh.svg" alt="retweet">3</a>
+              <a href=""><img src="/images/heart.svg" alt="like">10</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/images/tweetavatar.svg" alt="">
+          <div class="info">
+            <strong>James Wan <span>@jamesWan</span></strong>
+            <p>James Wan é um diretor, roteirista e produtor de cinema. Os filmes dirigidos por James Wan são Jogos
+              Mortais, Gritos Mortais, Sentença de Morte, Sobrenatural, Sobrenatural 2, Invocação do Mal, Invocação do
+              Mal 2, The Fast and the Furious e Aquaman.</p>
+            <div class="actions">
+              <a href=""><img src="/images/chat.svg" alt="chat">2</a>
+              <a href=""><img src="/images/refresh.svg" alt="retweet">3</a>
+              <a href=""><img src="/images/heart.svg" alt="like">10</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/images/tweetavatar.svg" alt="">
+          <div class="info">
+            <strong>James Wan <span>@jamesWan</span></strong>
+            <p>James Wan é um diretor, roteirista e produtor de cinema. Os filmes dirigidos por James Wan são Jogos
+              Mortais, Gritos Mortais, Sentença de Morte, Sobrenatural, Sobrenatural 2, Invocação do Mal, Invocação do
+              Mal 2, The Fast and the Furious e Aquaman.</p>
+            <div class="actions">
+              <a href=""><img src="/images/chat.svg" alt="chat">2</a>
+              <a href=""><img src="/images/refresh.svg" alt="retweet">3</a>
+              <a href=""><img src="/images/heart.svg" alt="like">10</a>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <aside class="widgets">
+      <div class="widget follow">
+        <div class="title">
+          <strong>Who to follow</strong>
+          <a href="">Refresh</a>
+          <a href="">View all</a>
+        </div>
+        <ul>
+          <li>
+            <div class="profile">
+              <img src="/images/avatar.svg" alt="">
+              <div class="info">
+                <strong>Spade <span>@spade</span></strong>
+                <button>Follow</button>
+              </div>
+            </div>
+            <a href="">x</a>
+          </li>
+          <li>
+            <div class="profile">
+              <img src="/images/avatar.svg" alt="">
+              <div class="info">
+                <strong>Spade <span>@spade</span></strong>
+                <button>Follow</button>
+              </div>
+            </div>
+            x
+          </li>
+          <li>
+            <div class="profile">
+              <img src="/images/avatar.svg" alt="">
+              <div class="info">
+                <strong>Spade <span>@spade</span></strong>
+                <button>Follow</button>
+              </div>
+            </div>
+            x
+          </li>
+        </ul>
+      </div>
+    </aside>
   </div>
 </body>
 
